--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
     />
     <meta
       name="keywords"
-      content="Sohez Official, sayyed sohel, sohez,Sohez Official - SAYYED SOHEL, Portfolio website, personal website"
+      content="LONTSI Official, sayyed sohel, sohez,Sohez Official - SAYYED SOHEL, Portfolio website, personal website"
     />
     <meta property="og:type" content="website" />
     <meta name="theme-color" content="#151414" />
-    <link rel="canonical" href="https://sohez.github.io/" />
+    <link rel="canonical" href="https://LLontsi.github.io/" />
     <meta name="”robots”" content="index, follow" />
     <meta
       name="og_site_name"
       property="og:site_name"
-      content="sohez.github.io"
+      content="LLontsi.github.io"
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="#151414" />
 
     <link
       rel="apple-touch-icon"
-      href="https://avatars.githubusercontent.com/u/57430072?v=4"
+      href="https://avatars.githubusercontent.com/u/118203681?v=4"
     />
     <link
       rel="icon"
       type="image/x-icon"
-      href="https://avatars.githubusercontent.com/u/57430072?v=4"
+      href="https://avatars.githubusercontent.com/u/118203681?v=4"
     />
 
     <!-- Bootstrap links -->
@@ -161,7 +161,7 @@
 
         <!-- Skills -->
         <div class="row mt-5">
-          <span class="maincolor text-center mb-4" id="skills">SKILLS</span>
+          <span class="maincolor text-center mb-4" id="skills">COMPETENCE</span>
           <div class="row justify-content-center" id="progress-data"></div>
         </div>
         <!-- skills close -->
@@ -246,17 +246,17 @@
                 </li>
               </ul>
             </div>
-            <p class="text-center">
+           <!-- <p class="text-center">
               Copyright © -
               <a
                 rel="noopener"
-                href="https://sohez.github.io/"
+                href="https://LLontsi.github.io/"
                 target="_blank"
                 class="maincolor"
                 title="Home-Page"
                 >lontsi lambou</a
               >
-            </p>
+            </p>-->
           </div>
         </div>
       </div>
@@ -317,13 +317,13 @@
       {
         "@context": "https://schema.org/",
         "@type": "Person",
-        "name": "SAYYED SOHEL",
-        "url": "https://sohez.github.io/",
+        "name": "LONTSI LAMBOU",
+        "url": "https://LLontsi.github.io/",
         "image": "https://avatars.githubusercontent.com/u/57430072?v=4",
         "sameAs": [
-          "https://www.instagram.com/sohel_code.py/",
-          "https://github.com/sohez",
-          "https://sohez.github.io/"
+          "https://www.instagram.com/maurolontsi?igsh=YzlijYTk1ODg3Zg==/",
+          "https://github.com/LLontsi",
+          "https://LLontsi.github.io/"
         ],
         "jobTitle": "Founder",
         "worksFor": {
