--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         </div>
       </div>
     </main>
-
+    <!-- end main  -->
     <footer>
       <!-- bottom card -->
       <div class="crd" id="toggle-card">
