--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="title" content="LONTSI Official - LAMBOU" />
     <meta
       name="description"
-      content="My Name is SAYYED SOHEL i am Android developer and Web developer. I love developing and building Applications."
+      content="My Name is lontsi lambou i am Android developer and Web developer. I love developing and building Applications."
     />
     <meta
       name="keywords"
