--- a/index.html
+++ b/index.html
@@ -312,6 +312,8 @@
     <script src="./script/typeing.js"></script>
     <script src="./script/send.js"></script>
     <script src="./script/project/project.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+
     <!-- For seo dont think about -->
     <script type="application/ld+json">
       {
