--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="row justify-content-center" id="progress-data"></div>
         </div>
         <!-- skills close -->
-        <hr />
+        <hr />static
         <!-- Projects start-->
         <div class="row mt-5 mb-5 justify-content-center">
           <span class="maincolor text-center mb-4" id="Projects">PROJECTS</span>
@@ -178,7 +178,7 @@
           <span class="maincolor text-center mb-4" id="contact">CONTACT</span>
           <div class="col-md-10 col-lg-6">
             <!-- form -->
-            <form id="formid">
+         <!--  <form id="formid">
               <div class="mb-3">
                 <input type="hidden" name="Name" id="Name" value="@PORTFOLIO" />
                 <label for="Email" class="form-label">Email address</label>
@@ -206,7 +206,40 @@
                 class="maincolor"
               ></span>
             </form>
+          </div>--->
+          <div class="col-lg-6">
+            <form id="contactForm" action="https://formspree.io/f/xvoevyye" method="POST" class="php-email-form">
+              <div class="row gy-4">
+
+                <div class="col-md-6">
+                  <input type="text" name="nom" id="nom" class="form-control" placeholder="Votre nom" required>
+                </div>
+
+                <div class="col-md-6 ">
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Votre adresse mail" required>
+                </div>
+
+                <div class="col-md-12">
+                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Objet" required>
+                </div>
+
+                <div class="col-md-12">
+                  <textarea class="form-control" name="message" rows="6" id="message" placeholder="Message" required></textarea>
+                </div>
+
+                <div class="col-md-12 text-center">
+                  <button type="submit">Envoyer</button>
+                </div>
+
+              </div>
+            </form>
+
           </div>
+
+        </div>
+
+      </div>
+
           <div class="col-md-10 col-lg-6 justify-content-center mt-5">
             <!-- social links -->
             <div class="row">
@@ -333,5 +366,38 @@
         }
       }
     </script>
+    <!-- Place this script at the end of the body tag -->
+<script>
+  var form = document.getElementById("my-form");
+  
+  async function handleSubmit(event) {
+    event.preventDefault();
+    var status = document.getElementById("my-form-status");
+    var data = new FormData(event.target);
+    fetch(event.target.action, {
+      method: form.method,
+      body: data,
+      headers: {
+          'Accept': 'application/json'
+      }
+    }).then(response => {
+      if (response.ok) {
+        status.innerHTML = "Thanks for your submission!";
+        form.reset()
+      } else {
+        response.json().then(data => {
+          if (Object.hasOwn(data, 'errors')) {
+            status.innerHTML = data["errors"].map(error => error["message"]).join(", ")
+          } else {
+            status.innerHTML = "Oops! There was a problem submitting your form"
+          }
+        })
+      }
+    }).catch(error => {
+      status.innerHTML = "Oops! There was a problem submitting your form"
+    });
+  }
+  form.addEventListener("submit", handleSubmit)
+</script>
   </body>
 </html>
