--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       name="keywords"
-      content="LONTSI Official, sayyed sohel, sohez,Sohez Official - SAYYED SOHEL, Portfolio website, personal website"
+      content="LONTSI Officiel, lontsi,lambou,LONTSI LAMBOU, Lontsi Lambou,lontsi lambou, Portfolio website, personal website"
     />
     <meta property="og:type" content="website" />
     <meta name="theme-color" content="#151414" />
@@ -26,10 +26,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="#151414" />
 
-    <link
+    <!--<link  <title> vCard - Personal Portfolio</title>
       rel="apple-touch-icon"
       href="https://avatars.githubusercontent.com/u/118203681?v=4"
-    />
+    />--->
     <link
       rel="icon"
       type="image/x-icon"
@@ -154,8 +154,7 @@
       
           <p class="fs-3 mt-4 text-center txt-color">Dans mon portfolio, vous trouverez des exemples de mes réalisations passées, illustrant ma capacité à concevoir et à mettre en œuvre des solutions innovantes dans des contextes variés. Je suis toujours ouvert aux nouvelles opportunités de collaboration et de contribution à des projets passionnants.</p>
       
-          <p class="fs-3 mt-4 text-center txt-color">Je suis impatient de partager mes connaissances, mes compétences et ma passion pour l'informatique avec vous. N'hésitez pas à me contacter pour discuter de projets potentiels ou pour en savoir plus sur mes réalisations.</p>
-        </div>
+          0
         <!-- about section end -->
         <hr />
 
