--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LONTSI Official - LAMBOU</title>
-    <meta name="title" content="LONTSI Official - LAMBOU" />
-    <meta
-      name="description"
-      content="My Name is lontsi lambou i am Android developer and Web developer. I love developing and building Applications."
-    />
-    <meta
-      name="keywords"
-      content="LONTSI Officiel, lontsi,lambou,LONTSI LAMBOU, Lontsi Lambou,lontsi lambou, Portfolio website, personal website"
-    />
+    <title>LONTSI Official - LAMBOU | Android & Web Developer</title>
+    <meta name="description" content="My Name is lontsi lambou. I am an Android and Web developer. I love developing and building Applications." />
+    <meta name="keywords" content="LONTSI Official, lontsi, lambou, LONTSI LAMBOU, Lontsi Lambou, lontsi lambou, Portfolio website, personal website, Android developer, Web developer" />
     <meta property="og:type" content="website" />
     <meta name="theme-color" content="#151414" />
+    <link rel="canonical" href="https://LLontsi.github.io/" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:site_name" content="LONTSI Official - LAMBOU" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#151414" />
     <link rel="canonical" href="https://LLontsi.github.io/" />
     <meta name="”robots”" content="index, follow" />
     <meta
@@ -23,8 +21,7 @@
       property="og:site_name"
       content="LLontsi.github.io"
     />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="#151414" />
+  
 
     <!--<link  <title> vCard - Personal Portfolio</title>
       rel="apple-touch-icon"
